group 'io.github.cdfn'
version '1.0.0'

subprojects {
    apply plugin: 'java'

    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}